--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,6 +10,7 @@ pyyaml = "^5.3.1"
 invoke = "^1.4.1"
 structlog = "^20.1.0"
 colorama = "^0.4.3"
+jsonlines = "^1.2.0"
 
 [tool.poetry.dev-dependencies]
 pytest = "^5.2"
